Add more options for sigils

--- a/lib/languages/elixir.txt
+++ b/lib/languages/elixir.txt
@@ -4,20 +4,68 @@
 @moduledoc '''-->>'''
 @moduledoc ~s"""-->>"""
 @moduledoc ~s'''-->>'''
+@moduledoc ~s/\j-->>/
+@moduledoc ~s|\j-->>|
+@moduledoc ~s"\j-->>"
+@moduledoc ~s'\j-->>'
+@moduledoc ~s(\j-->>)
+@moduledoc ~s[\j-->>]
+@moduledoc ~s{\j-->>}
+@moduledoc ~s<\j-->>>
 @moduledoc ~S"""-->>"""
 @moduledoc ~S'''-->>'''
+@moduledoc ~S/\j-->>/
+@moduledoc ~S|\j-->>|
+@moduledoc ~S"\j-->>"
+@moduledoc ~S'\j-->>'
+@moduledoc ~S(\j-->>)
+@moduledoc ~S[\j-->>]
+@moduledoc ~S{\j-->>}
+@moduledoc ~S<\j-->>>
 @moduledoc "\p
 @doc """-->>"""
 @doc '''-->>'''
 @doc ~s"""-->>"""
 @doc ~s'''-->>'''
+@doc ~s/\j-->>/
+@doc ~s|\j-->>|
+@doc ~s"\j-->>"
+@doc ~s'\j-->>'
+@doc ~s(\j-->>)
+@doc ~s[\j-->>]
+@doc ~s{\j-->>}
+@doc ~s<\j-->>>
 @doc ~S"""-->>"""
 @doc ~S'''-->>'''
+@doc ~S/\j-->>/
+@doc ~S|\j-->>|
+@doc ~S"\j-->>"
+@doc ~S'\j-->>'
+@doc ~S(\j-->>)
+@doc ~S[\j-->>]
+@doc ~S{\j-->>}
+@doc ~S<\j-->>>
 @doc "\p
-@typedoc '''-->>'''
 @typedoc """-->>"""
-@typedoc ~s'''-->>'''
+@typedoc '''-->>'''
 @typedoc ~s"""-->>"""
-@typedoc ~S'''-->>'''
+@typedoc ~s'''-->>'''
+@typedoc ~s/\j-->>/
+@typedoc ~s|\j-->>|
+@typedoc ~s"\j-->>"
+@typedoc ~s'\j-->>'
+@typedoc ~s(\j-->>)
+@typedoc ~s[\j-->>]
+@typedoc ~s{\j-->>}
+@typedoc ~s<\j-->>>
 @typedoc ~S"""-->>"""
+@typedoc ~S'''-->>'''
+@typedoc ~S/\j-->>/
+@typedoc ~S|\j-->>|
+@typedoc ~S"\j-->>"
+@typedoc ~S'\j-->>'
+@typedoc ~S(\j-->>)
+@typedoc ~S[\j-->>]
+@typedoc ~S{\j-->>}
+@typedoc ~S<\j-->>>
 @typedoc "\p
