Fix the sigil syntax

--- a/lib/languages/elixir.txt
+++ b/lib/languages/elixir.txt
@@ -4,68 +4,68 @@
 @moduledoc '''-->>'''
 @moduledoc ~s"""-->>"""
 @moduledoc ~s'''-->>'''
-@moduledoc ~s/\j-->>/
-@moduledoc ~s|\j-->>|
-@moduledoc ~s"\j-->>"
-@moduledoc ~s'\j-->>'
-@moduledoc ~s(\j-->>)
-@moduledoc ~s[\j-->>]
-@moduledoc ~s{\j-->>}
-@moduledoc ~s<\j-->>>
+@moduledoc ~s/\jp-->>/\jp
+@moduledoc ~s|\jp-->>|\jp
+@moduledoc ~s"\jp-->>"\jp
+@moduledoc ~s'\jp-->>'\jp
+@moduledoc ~s(\jp-->>)\jp
+@moduledoc ~s[\jp-->>]\jp
+@moduledoc ~s{\jp-->>}\jp
+@moduledoc ~s<\jp-->>>\jp
 @moduledoc ~S"""-->>"""
 @moduledoc ~S'''-->>'''
-@moduledoc ~S/\j-->>/
-@moduledoc ~S|\j-->>|
-@moduledoc ~S"\j-->>"
-@moduledoc ~S'\j-->>'
-@moduledoc ~S(\j-->>)
-@moduledoc ~S[\j-->>]
-@moduledoc ~S{\j-->>}
-@moduledoc ~S<\j-->>>
+@moduledoc ~S/\jp-->>/\jp
+@moduledoc ~S|\jp-->>|\jp
+@moduledoc ~S"\jp-->>"\jp
+@moduledoc ~S'\jp-->>'\jp
+@moduledoc ~S(\jp-->>)\jp
+@moduledoc ~S[\jp-->>]\jp
+@moduledoc ~S{\jp-->>}\jp
+@moduledoc ~S<\jp-->>>\jp
 @moduledoc "\p
 @doc """-->>"""
 @doc '''-->>'''
 @doc ~s"""-->>"""
 @doc ~s'''-->>'''
-@doc ~s/\j-->>/
-@doc ~s|\j-->>|
-@doc ~s"\j-->>"
-@doc ~s'\j-->>'
-@doc ~s(\j-->>)
-@doc ~s[\j-->>]
-@doc ~s{\j-->>}
-@doc ~s<\j-->>>
+@doc ~s/\jp-->>/\jp
+@doc ~s|\jp-->>|\jp
+@doc ~s"\jp-->>"\jp
+@doc ~s'\jp-->>'\jp
+@doc ~s(\jp-->>)\jp
+@doc ~s[\jp-->>]\jp
+@doc ~s{\jp-->>}\jp
+@doc ~s<\jp-->>>\jp
 @doc ~S"""-->>"""
 @doc ~S'''-->>'''
-@doc ~S/\j-->>/
-@doc ~S|\j-->>|
-@doc ~S"\j-->>"
-@doc ~S'\j-->>'
-@doc ~S(\j-->>)
-@doc ~S[\j-->>]
-@doc ~S{\j-->>}
-@doc ~S<\j-->>>
+@doc ~S/\jp-->>/\jp
+@doc ~S|\jp-->>|\jp
+@doc ~S"\jp-->>"\jp
+@doc ~S'\jp-->>'\jp
+@doc ~S(\jp-->>)\jp
+@doc ~S[\jp-->>]\jp
+@doc ~S{\jp-->>}\jp
+@doc ~S<\jp-->>>\jp
 @doc "\p
 @typedoc """-->>"""
 @typedoc '''-->>'''
 @typedoc ~s"""-->>"""
 @typedoc ~s'''-->>'''
-@typedoc ~s/\j-->>/
-@typedoc ~s|\j-->>|
-@typedoc ~s"\j-->>"
-@typedoc ~s'\j-->>'
-@typedoc ~s(\j-->>)
-@typedoc ~s[\j-->>]
-@typedoc ~s{\j-->>}
-@typedoc ~s<\j-->>>
+@typedoc ~s/\jp-->>/\jp
+@typedoc ~s|\jp-->>|\jp
+@typedoc ~s"\jp-->>"\jp
+@typedoc ~s'\jp-->>'\jp
+@typedoc ~s(\jp-->>)\jp
+@typedoc ~s[\jp-->>]\jp
+@typedoc ~s{\jp-->>}\jp
+@typedoc ~s<\jp-->>>\jp
 @typedoc ~S"""-->>"""
 @typedoc ~S'''-->>'''
-@typedoc ~S/\j-->>/
-@typedoc ~S|\j-->>|
-@typedoc ~S"\j-->>"
-@typedoc ~S'\j-->>'
-@typedoc ~S(\j-->>)
-@typedoc ~S[\j-->>]
-@typedoc ~S{\j-->>}
-@typedoc ~S<\j-->>>
+@typedoc ~S/\jp-->>/\jp
+@typedoc ~S|\jp-->>|\jp
+@typedoc ~S"\jp-->>"\jp
+@typedoc ~S'\jp-->>'\jp
+@typedoc ~S(\jp-->>)\jp
+@typedoc ~S[\jp-->>]\jp
+@typedoc ~S{\jp-->>}\jp
+@typedoc ~S<\jp-->>>\jp
 @typedoc "\p
