Add extended snippet extractor (#19)
* Created README with initial features

* Rule parser should bring empty list when given empty ruleset

* Rule parser should bring simple rule for a word

* Rule parser should bring simple rule with partial modifier for a partial word

* Rule parser should bring simple rule with just modifier for a just word

* Rule parser should bring simple rule with the given modifiers

* Rule parser should bring simple rule with words with repeated characters

* Rule parser should respect spaces and tabs in words

* Making README.md consistent with implementation

* Rule parser should parse multiline rules as a combination of simple rules

* Rule parser should bring list with all the rules that are brought in the text

* Updated README with another possible improvement we could do

* Ran rubocop to correct style mistakes

* Ran rubocop again. Corrected line endings

* Fixed requires for tests

* Rubocop fixes

* Add JSON reference

* Fix up tests

* Changing to directory Extended

* Empty ruleset brings empty syntax trie

Also more rubocop fixes for line endings

* WIP: Trying to understand why Zeitwerk doesn't find definitions. This test NameError: uninitialized constant SnippetExtractor::Extended::SyntaxTrieFactoryTest::SimpleRule
even with SnippetExtractor::Extended::SimpleRule syntax

* Managed to get the test configuration running but I'm totally unsure why. The same test text definition, pasting LineSkip over LineSkip made the test fail because it couldnt find LineSkip. Undoing it made it work again.

I'd really appreciate help explaining the gem to me and how should I handle class structure.

* Fixed tests the hacky way. TODO change them to the classes in the future (is not cleaner this way?)

Adding the classes to force ruby to evaluate them as expressions will force zeitwerk to load the files.

* Syntax trie saves single rules

* Syntax trie saves whole word multiple rules

* S

--- a/lib/languages/ruby.txt
+++ b/lib/languages/ruby.txt
@@ -1,2 +1,5 @@
-# 
-require 
+!e stop_at_first_loc
+#\p
+require
+=begin-->>=end
+__END__-->>[toTheEndOfFilemaksklnlkjanmelnjlknSomethingUnmatchable]//Not the best I know
