--- a/lib/languages/elixir.txt
+++ b/lib/languages/elixir.txt
@@ -1,1 +1,71 @@
-#
+!e
+#\p
+@moduledoc """-->>"""
+@moduledoc '''-->>'''
+@moduledoc ~s"""-->>"""
+@moduledoc ~s'''-->>'''
+@moduledoc ~s/\jp-->>/\jp
+@moduledoc ~s|\jp-->>|\jp
+@moduledoc ~s"\jp-->>"\jp
+@moduledoc ~s'\jp-->>'\jp
+@moduledoc ~s(\jp-->>)\jp
+@moduledoc ~s[\jp-->>]\jp
+@moduledoc ~s{\jp-->>}\jp
+@moduledoc ~s<\jp-->>>\jp
+@moduledoc ~S"""-->>"""
+@moduledoc ~S'''-->>'''
+@moduledoc ~S/\jp-->>/\jp
+@moduledoc ~S|\jp-->>|\jp
+@moduledoc ~S"\jp-->>"\jp
+@moduledoc ~S'\jp-->>'\jp
+@moduledoc ~S(\jp-->>)\jp
+@moduledoc ~S[\jp-->>]\jp
+@moduledoc ~S{\jp-->>}\jp
+@moduledoc ~S<\jp-->>>\jp
+@moduledoc "\p
+@doc """-->>"""
+@doc '''-->>'''
+@doc ~s"""-->>"""
+@doc ~s'''-->>'''
+@doc ~s/\jp-->>/\jp
+@doc ~s|\jp-->>|\jp
+@doc ~s"\jp-->>"\jp
+@doc ~s'\jp-->>'\jp
+@doc ~s(\jp-->>)\jp
+@doc ~s[\jp-->>]\jp
+@doc ~s{\jp-->>}\jp
+@doc ~s<\jp-->>>\jp
+@doc ~S"""-->>"""
+@doc ~S'''-->>'''
+@doc ~S/\jp-->>/\jp
+@doc ~S|\jp-->>|\jp
+@doc ~S"\jp-->>"\jp
+@doc ~S'\jp-->>'\jp
+@doc ~S(\jp-->>)\jp
+@doc ~S[\jp-->>]\jp
+@doc ~S{\jp-->>}\jp
+@doc ~S<\jp-->>>\jp
+@doc "\p
+@typedoc """-->>"""
+@typedoc '''-->>'''
+@typedoc ~s"""-->>"""
+@typedoc ~s'''-->>'''
+@typedoc ~s/\jp-->>/\jp
+@typedoc ~s|\jp-->>|\jp
+@typedoc ~s"\jp-->>"\jp
+@typedoc ~s'\jp-->>'\jp
+@typedoc ~s(\jp-->>)\jp
+@typedoc ~s[\jp-->>]\jp
+@typedoc ~s{\jp-->>}\jp
+@typedoc ~s<\jp-->>>\jp
+@typedoc ~S"""-->>"""
+@typedoc ~S'''-->>'''
+@typedoc ~S/\jp-->>/\jp
+@typedoc ~S|\jp-->>|\jp
+@typedoc ~S"\jp-->>"\jp
+@typedoc ~S'\jp-->>'\jp
+@typedoc ~S(\jp-->>)\jp
+@typedoc ~S[\jp-->>]\jp
+@typedoc ~S{\jp-->>}\jp
+@typedoc ~S<\jp-->>>\jp
+@typedoc "\p
