Added #`< comments, changed unit to unit module

--- a/lib/languages/raku.txt
+++ b/lib/languages/raku.txt
@@ -2,9 +2,11 @@
 #`(+\j-->>)+\pj
 #`{+\j-->>}+\pj
 #`[+\j-->>]+\pj
+#`<+\j-->>>+\pj
 #`(\j-->>)\pj
 #`{\j-->>}\pj
 #`[\j-->>]\pj
+#`<\j-->>>\pj
 #
 =begin-->>=end
-unit
+unit module
