Added support for comments using ｢｣

--- a/lib/languages/raku.txt
+++ b/lib/languages/raku.txt
@@ -3,9 +3,12 @@
 #`{+\j-->>}+\pj
 #`[+\j-->>]+\pj
 #`<+\j-->>>+\pj
+#`｢+\j-->>｣+\pj
 #`(\j-->>)\pj
 #`{\j-->>}\pj
 #`[\j-->>]\pj
 #`<\j-->>>\pj
+#`｢\j-->>｣\pj
 #
-=begin-->>=end
+=begin comment-->>=end comment
+=comment
